<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MinimalPay</string>
    <string name="title_main">MinimalPay 정산</string>
    <string name="subtitle_main">미니멀페이 · 1/N 정산 &amp; 최소 송금</string>
    <string name="nav_group">그룹</string>
    <string name="nav_expense">지출</string>
    <string name="nav_report">정산</string>
    <string name="nav_transfer">송금</string>
    <string name="uc1_title">UC-1  그룹 · 멤버</string>
    <string name="uc2_title">UC-2  지출 · 정산 방식</string>
    <string name="uc3_title">UC-3  정산 리포트</string>
    <string name="uc4_title">UC-4  송금 연동</string>
    <string name="hint_group_name">그룹명</string>
    <string name="hint_member_name">멤버 이름</string>
    <string name="hint_account">계좌 (선택)</string>
    <string name="hint_expense_desc">내역</string>
    <string name="hint_amount">금액 (원)</string>
    <string name="btn_create_group">그룹 생성</string>
    <string name="btn_add_member">멤버 추가</string>
    <string name="btn_register_expense">지출 등록</string>
    <string name="btn_report">정산 리포트 생성 (SSD)</string>
    <string name="btn_transfer">송금 실행</string>
    <string name="label_payer">결제자</string>
    <string name="label_participants">참여 멤버</string>
    <string name="label_strategy">정산 방식</string>
    <string name="extend_guide">[Extend 조건 발동] 계좌 정보가 부재하여 수동 입력을 유도합니다</string>
    <string name="empty_members">멤버를 추가해 주세요</string>
    <string name="empty_report">정산 리포트를 생성해 주세요</string>
    <string name="step_group">1/4</string>
    <string name="step_expense">2/4</string>
    <string name="step_report">3/4</string>
    <string name="step_transfer">4/4</string>
    <string name="btn_previous">이전</string>
    <string name="btn_next">다음</string>
    <string name="btn_finish">완료</string>
    <string name="hint_member_count">참여 인원 수 (명)</string>
    <string name="label_new_group">새 그룹 만들기</string>
    <string name="label_group_box">내 그룹</string>
    <string name="label_add_member_in_group">이 그룹에 참여 멤버 추가</string>
    <string name="label_member_list_in_group">이 그룹의 참여 멤버</string>
    <string name="btn_add_member_to_group">그룹에 멤버 추가</string>
    <string name="empty_members_in_group">아직 이 그룹에 등록된 멤버가 없습니다.\n위에서 멤버를 추가해 주세요.</string>
    <string name="label_member_progress">멤버 등록 현황</string>
    <string name="step_title_group">1/4 · 그룹 · 멤버 설정</string>
    <string name="step_title_expense">2/4 · 지출 등록</string>
    <string name="step_title_report">3/4 · 정산 리포트</string>
    <string name="step_title_transfer">4/4 · 송금 연동</string>
    <string name="wizard_complete">모든 정산 과정이 완료되었습니다.</string>
</resources>
